@@ -34,4 +34,4 @@ requires:
   perl: 5.005
 resources:
   license: http://dev.perl.org/licenses/
-version: 3.012
+version: 3.013
